--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "create-cert": "^1.0.6",
     "http-proxy": "^1.18.1",
     "js-base64": "^3.5.2",
-    "meteor-node-stubs": "^0.4.1"
+    "meteor-node-stubs": "^0.4.1",
+    "pipe2jpeg": "^0.3.1",
+    "ws": "^7.3.1"
   }
 }
